--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,28 +1,31 @@
 <nav role="navigation" aria-label="Main navigation">
 
     {%- assign collections = site.collections | where: "is_post", false | sort: "nav_order" -%}
-    {%- assign index = 1 -%}
     {%- for collection in collections -%}
       <h3 class="mt-0">{{ collection.title }}</h3>
       {%- if collection.has_sections -%}
         {%- assign sections = collection.sections | sort: "nav_order" -%}
         {%- for section in sections -%}
           <h4>{{ section.name }}</h4>
-          <ol class="navigation-list">
+          <ul class="navigation-list">
           {%- assign documents = collection.docs | where: "section", section.name | sort: "nav_order" -%}
           {%- for document in documents -%}
-            <li class="navigation-list-item">{{ document.name }}</li>
+            <li class="navigation-list-item{% if page.url == document.url %} active{% endif %}">
+              <a href="{{ document.url }}" class="navigation-list-link">{{ document.name }}</a>
+            </li>
           {%- endfor -%}
-          </ol>
+          </ul>
         {%- endfor -%}
       {%- else -%}
         {%- assign documents = collection.docs | sort: "nav_order" -%}
-        <ol class="navigation-list">
+        <ul class="navigation-list">
         {%- for document in documents -%}
-          <li class="navigation-list-item">{{ document.name }}</li>
+          <li class="navigation-list-item{% if page.url == document.url %} active{% endif %}">
+            <a href="{{ document.url }}" class="navigation-list-link">{{ document.name }}</a>
+          </li>
         {%- endfor -%}
-        </ol>
-      {% endif %}
+        </ul>
+      {%- endif -%}
       <div style="border-bottom: 1px solid #eeebee;height: 32px;margin-bottom: 32px"></div>
     {%- endfor -%}
 
