--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -11,7 +11,7 @@
           {%- assign documents = collection.docs | where: "section", section.name | sort: "nav_order" -%}
           {%- for document in documents -%}
             <li class="navigation-list-item{% if page.url == document.url %} active{% endif %}">
-              <a href="/Andromeda/{{ document.url }}" class="navigation-list-link">{{ document.name }}</a>
+              <a href="/Andromeda{{ document.url }}" class="navigation-list-link">{{ document.name }}</a>
             </li>
           {%- endfor -%}
           </ul>
@@ -21,7 +21,7 @@
         <ul class="navigation-list">
         {%- for document in documents -%}
           <li class="navigation-list-item{% if page.url == document.url %} active{% endif %}">
-            <a href="/Andromeda/{{ document.url }}" class="navigation-list-link">{{ document.name }}</a>
+            <a href="/Andromeda{{ document.url }}" class="navigation-list-link">{{ document.name }}</a>
           </li>
         {%- endfor -%}
         </ul>
