--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,12 +54,15 @@ layout: table_wrappers
               <nav class="breadcrumb-nav">
                 <ol class="breadcrumb-nav-list">
                   {% if page.grand_parent %}
-                    <li class="breadcrumb-nav-list-item"><span>{{ page.section | capitalize }}</span></li>
                     <li class="breadcrumb-nav-list-item"><a href="{{ first_level_url }}">{{ page.grand_parent }}</a></li>
                     <li class="breadcrumb-nav-list-item"><a href="{{ second_level_url }}">{{ page.parent }}</a></li>
                   {% else %}
+                    {% unless page.section == nil %}
                     <li class="breadcrumb-nav-list-item"><span>{{ page.section | capitalize }}</span></li>
                     <li class="breadcrumb-nav-list-item"><a href="{{ first_level_url }}">{{ page.parent }}</a></li>
+                    {% else %}
+                    <li class="breadcrumb-nav-list-item"><a href="{{ first_level_url }}">{{ page.parent }}</a></li>
+                    {% endunless %}
                   {% endif %}
                   <li class="breadcrumb-nav-list-item"><span>{{ page.title }}</span></li>
                 </ol>
