--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,44 +1,73 @@
 <nav role="navigation" aria-label="Main navigation">
+
+  <!-- Get the collections -->
   {%- assign collections = site.collections | where: "is_post", false | sort: "nav_order" -%}
+
+  <!-- Loop the collections -->
   {%- for collection in collections -%}
     <div class="navigation-section">
       <div class="navigation-section-content">
-        <h3 class="mt-0">{{ collection.title }}</h3>
+        <h3 class="mt-0">{{ collection.title | capitalize }}</h3>
+
+        <!-- Get all the sections -->
         {%- assign sections = collection.sections | sort: "nav_order" -%}
+
+        <!-- Loop the sections -->
         {%- for section in sections -%}
           <h4>{{ section.name }}</h4>
-          <ul class="navigation-list">
-          {%- assign documents = collection.docs | where: "section", section.name | sort: "nav_order" -%}
-          {%- for document in documents -%}
-            {%- if document.parent == nil -%}
-              {%- if page.section == document.section and page.parent == document.title -%}
-                {%- assign first_level_url = document.url | absolute_url -%}
-              {%- endif -%}
-              <li class="navigation-list-item{% if page.section == document.section and page.title == document.title or page.parent == document.title or page.grand_parent == document.title %} active{% endif %}">
-                <a href="{{ document.url | prepend: site.baseurl }}" class="navigation-list-link{% if page.url == document.url %} active{% endif %}">{{ document.title }}</a>
-                {%- if document.has_children -%}
-                  {%- assign all_children = collection.docs | where: "parent", document.title -%}
-                  {%- assign section_children = all_children | where: "section", section.name | sort: "nav_order" -%}
-                  <ol class="navigation-list-child-list ">
-                  {%- for child in section_children -%}
-                    <li class="navigation-list-item {% if page.url == child.url %} active{% endif %}">
-                      <a href="{{ child.url | absolute_url }}" class="navigation-list-link{% if page.url == child.url %} active{% endif %}">{{ child.title }}</a>
-                      {%- if child.title == page.parent and child.parent == page.grand_parent -%}
-                        {%- assign grand_child = documents | where: "title", page.title | first -%}
-                        <ul class="navigation-list-child-list">
-                          <li class="navigation-list-item active">
-                            <a href="{{ grand_child.url | absolute_url }}" class="navigation-list-link active">{{ grand_child.title }}</a>
-                          </li>
-                        </ul>
-                      {%- endif -%}
-                    </li>
-                  {%- endfor -%}
-                  </ol>
-                {%- endif -%}
-              </li>
-            {%- endif -%}
-          {%- endfor -%}
-          </ul>
+
+          <!-- Get the section pages -->
+          {%- assign section_pages = collection.docs | where: "section", section.name | sort: "nav_order" -%}
+          {%- assign section_pages_size = section_pages | size -%}
+
+          <!-- Unless there is no section pages -->
+          {%- unless section_pages_size == 0 -%}
+
+            <ul class="navigation-list">
+
+            <!-- Loop the section pages -->
+            {%- for section_page in section_pages -%}
+
+              <!-- Unless there is a parent or grand_parent -->
+              {%- unless section_page.parent_uuid -%}
+
+                <li class="navigation-list-item{% if section_page.uuid == page.uuid or section_page.uuid == page.parent_uuid or section_page.uuid == page.grand_parent_uuid %} active{% endif %}">
+                  <a href="{{ section_page.url | prepend: site.baseurl }}" class="navigation-list-link{% if page.uuid == section_page.uuid %} active{% endif %}">{{ section_page.title }}</a>
+
+                  <!-- Get the children of the primary page -->
+                  {%- assign children = section_pages | where: "parent_uuid", section_page.uuid | sort: "nav_order" -%}
+                  {%- assign children_size = children | size -%}
+
+                  <!-- Unless there is no children -->
+                  {%- unless children_size == 0 -%}
+
+                    <ol class="navigation-list-child-list ">
+
+                      <!-- Loop the section pages -->
+                      {%- for child in children -%}
+                        <li class="navigation-list-item{% if child.uuid == page.uuid or child.uuid == page.parent_uuid %} active{% endif %}">
+                          <a href="{{ child.url | absolute_url }}" class="navigation-list-link{% if child.uuid == page.uuid %} active{% endif %}">{{ child.title }}</a>
+
+                          {% if child.uuid == page.parent_uuid %}
+                            <!-- Get the grand children -->
+                            {%- assign grand_child = section_pages | where: "uuid", page.uuid | first -%}
+                            <ul class="navigation-list-child-list">
+                              <li class="navigation-list-item{% if grand_child.uuid == page.uuid %} active{% endif %}">
+                                <a href="{{ grand_child.url | absolute_url }}" class="navigation-list-link{% if grand_child.uuid == page.uuid %} active{% endif %}">{{ grand_child.title }}</a>
+                              </li>
+                            </ul>
+                          {%- endif -%}
+
+                        </li>
+                      {%- endfor -%}
+
+                    </ol>
+                  {%- endunless -%}
+                </li>
+              {%- endunless -%}
+            {%- endfor -%}
+            </ul>
+          {%- endunless -%}
         {%- endfor -%}
       </div>
     </div>
