--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,67 +1,39 @@
 <nav role="navigation" aria-label="Main navigation">
-
-  <!-- Get the collections -->
-  {%- assign collections = site.collections | where: "nav_include", true | sort: "nav_order" -%}
-
-  <!-- Loop the collections -->
-  {%- for collection in collections -%}
+  {% assign sections = site.data.nav.sections | sort: "nav_order" %}
+  {%- for section in sections -%}
     <div class="navigation-section">
       <div class="navigation-section-content">
-        <h3 class="mt-0">{{ collection.title | capitalize }}</h3>
-
-        <!-- Get all the sections -->
-        {%- assign sections = collection.sections | sort: "nav_order" -%}
-
-        <!-- Loop the sections -->
-        {%- for section in sections -%}
-          <h4>{{ section.name }}</h4>
-
-          <!-- Get the section pages -->
-          {%- assign section_pages = collection.docs | where: "section", section.name | sort: "nav_order" -%}
-          {%- assign section_pages_size = section_pages | size -%}
-
-          <!-- Unless there is no section pages -->
-          {%- unless section_pages_size == 0 -%}
-
+        <h3 class="mt-0">{{ section.title }}</h3>
+        {%- assign contexts = section.contexts | sort: "nav_order" -%}
+        {%- for context in contexts -%}
+          <h4>{{ context.title }}</h4>
+          {%- assign doc_pages = documentation_collection.docs | where: "context_uuid", context.uuid | sort: "nav_order" -%}
+          {%- assign doc_pages_size = doc_pages | size -%}
+          {%- unless doc_pages_size == 0 -%}
             <ul class="navigation-list">
-
-            <!-- Loop the section pages -->
-            {%- for section_page in section_pages -%}
-
-              <!-- Unless there is a parent or grand_parent -->
-              {%- unless section_page.parent_uuid -%}
-
-                <li class="navigation-list-item{% if section_page.uuid == page.uuid or section_page.uuid == page.parent_uuid or section_page.uuid == page.grand_parent_uuid %} active{% endif %}">
-                  <a href="{{ section_page.url | prepend: site.baseurl }}" class="navigation-list-link{% if page.uuid == section_page.uuid %} active{% endif %}">{{ section_page.title }}</a>
-
-                  <!-- Get the children of the primary page -->
-                  {%- assign children = section_pages | where: "parent_uuid", section_page.uuid | sort: "nav_order" -%}
+            {%- for doc_page in doc_pages -%}
+              {%- unless doc_page.parent_uuid -%}
+                <li class="navigation-list-item{% if doc_page.uuid == page.uuid or doc_page.uuid == page.parent_uuid %} active{% endif %}">
+                  <a href="{{ doc_page.url | prepend: site.baseurl }}" class="navigation-list-link{% if doc_page.uuid == page.uuid %} active{% endif %}">{{ doc_page.title }}</a>
+                  {%- assign children = doc_pages | where: "parent_uuid", doc_page.uuid | sort: "nav_order" -%}
                   {%- assign children_size = children | size -%}
-
-                  <!-- Unless there is no children -->
                   {%- unless children_size == 0 -%}
-
                     <ol class="navigation-list-child-list">
-
-                      <!-- Loop the children -->
                       {%- for child in children -%}
                         <li class="navigation-list-item{% if child.uuid == page.uuid or child.uuid == page.parent_uuid %} active{% endif %}">
                           <a href="{{ child.url | absolute_url }}" class="navigation-list-link{% if child.uuid == page.uuid %} active{% endif %}">{{ child.title }}</a>
 
-                          <!-- If the child is the page parent -->
-                          {% if child.uuid == page.parent_uuid %}
-                            <!-- Get the grand children -->
-                            {%- assign grand_child = section_pages | where: "uuid", page.uuid | first -%}
-                            <ul class="navigation-list-child-list custom-style">
-                              <li class="navigation-list-item{% if grand_child.uuid == page.uuid %} active{% endif %}">
-                                <a href="{{ grand_child.url | absolute_url }}" class="navigation-list-link{% if grand_child.uuid == page.uuid %} active{% endif %}">{{ grand_child.title }}</a>
-                              </li>
-                            </ul>
-                          {%- endif -%}
+                          <!--
+                          {%- assign grand_child = section_pages | where: "uuid", page.uuid | first -%}
+                          <ul class="navigation-list-child-list custom-style">
+                            <li class="navigation-list-item{% if grand_child.uuid == page.uuid %} active{% endif %}">
+                              <a href="{{ grand_child.url | absolute_url }}" class="navigation-list-link{% if grand_child.uuid == page.uuid %} active{% endif %}">{{ grand_child.title }}</a>
+                            </li>
+                          </ul>
+                          -->
 
                         </li>
                       {%- endfor -%}
-
                     </ol>
                   {%- endunless -%}
                 </li>
